[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/boss_type_eyemonster.gd" type="Script" id=1]
[ext_resource path="res://textures/bosses/eyemonster/body.png" type="Texture" id=2]
[ext_resource path="res://textures/bosses/eyemonster/eye.png" type="Texture" id=3]
[ext_resource path="res://textures/cards/global_cards/pig_explosion_particle.png" type="Texture" id=4]
[ext_resource path="res://textures/bosses/eyemonster/eye_icon.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 97.5691

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment(){
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/flash_color = Color( 1, 0, 0, 1 )
shader_param/flash_modifier = 0.3

[sub_resource type="Curve" id=2]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 13.5273, 0, 0, Vector2( 0.193182, 0.972727 ), 2.9, 2.9, 0, 0, Vector2( 0.363636, 1.40909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -4.35, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 80.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_curve = SubResource( 3 )

[sub_resource type="Animation" id=6]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.679739, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0
color_ramp = SubResource( 8 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.660131, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0 ), 0.0, 3.48387, 0, 0, Vector2( 0.284091, 0.904545 ), 0.45283, 0.45283, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="Animation" id=15]
resource_name = "teleport"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/eye:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprites/eye:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.0, 1300.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotate_eye")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=18]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprites:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0, 1 ),
"update": 0,
"values": [ 0.3, 0.0 ]
}

[node name="boss_type_eyemonster" type="Area2D"]
script = ExtResource( 1 )

[node name="coll_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprites" type="Node2D" parent="."]
material = SubResource( 17 )
scale = Vector2( 0.6, 0.6 )

[node name="balls" type="Particles2D" parent="sprites"]
use_parent_material = true
scale = Vector2( 1.66667, 1.66667 )
amount = 30
preprocess = 5.0
visibility_rect = Rect2( -79.879, -71.5549, 158.512, 150.243 )
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="body" type="Sprite" parent="sprites"]
use_parent_material = true
scale = Vector2( 1.00343, 1.00343 )
texture = ExtResource( 2 )

[node name="eye" type="Sprite" parent="sprites"]
use_parent_material = true
position = Vector2( -45, 0 )
rotation = 3.14159
texture = ExtResource( 3 )

[node name="idle_anim" type="AnimationPlayer" parent="sprites"]
autoplay = "idle"
anims/idle = SubResource( 6 )

[node name="smoke_particle" type="Particles2D" parent="sprites"]
use_parent_material = true
scale = Vector2( 1.66667, 1.66667 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -500, -500, 1000, 1000 )
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 4 )

[node name="eye_particle" type="Particles2D" parent="sprites"]
use_parent_material = true
scale = Vector2( 1.66667, 1.66667 )
emitting = false
amount = 1
one_shot = true
visibility_rect = Rect2( -500, -500, 1000, 1000 )
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 5 )

[node name="boss_cards" type="Node2D" parent="."]

[node name="teleport_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="teleport_anim" type="AnimationPlayer" parent="."]
anims/teleport = SubResource( 15 )

[node name="ready_anim" type="AnimationPlayer" parent="."]

[node name="hurt_anim" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 18 )

[connection signal="timeout" from="teleport_timer" to="." method="_on_teleport_timer_timeout"]
[connection signal="animation_finished" from="teleport_anim" to="." method="_on_teleport_anim_animation_finished"]
